--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/Sudoku"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Sudoku"
+        android:textSize="90dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/Button_Container"
+        />
+<LinearLayout
+    android:id="@+id/Button_Container"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:orientation="vertical"
+    android:padding="10dp"
+    >
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/New_Game_btn"
+        android:background="@drawable/my_button_shape_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="New Game"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Resume_Game_btn"
+        android:background="@drawable/my_button_shape_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Resume"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/Settings_btn"
+        android:background="@drawable/my_button_shape_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Settings"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        />
+
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
